<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F2F30"
    tools:context=".search_city">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/seach_background"
            android:layoutDirection="rtl"
            app:queryHint="Enter City" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Popupar cities"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/locate"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/Locate"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:background="@color/white"
                android:layout_marginRight="5dp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/delhi"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/Delhi"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:gravity="center"/>
            <TextView
                android:id="@+id/mumbai"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/Mumbai"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:background="@color/white"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lumpur"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:text="@string/Kuala_Lumpur"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:background="@color/white"
                android:layout_marginRight="5dp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/singapore"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/Singapore"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:gravity="center"/>
            <TextView
                android:id="@+id/new_york"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/New_York"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:background="@color/white"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/los_angeles"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/Los_angeles"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:background="@color/white"
                android:layout_marginRight="5dp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>